--- a/lib/styles.scss
+++ b/lib/styles.scss
@@ -44,3 +44,17 @@
     }
   }
 }
+
+#template_settings {
+  overflow: hidden;
+  height: calc(100% - 5px) !important;
+
+  & > .scrollable {
+    height: calc(100% - 2px);
+    overflow-y: auto;
+  }
+
+  & > .card-reveal {
+    top: calc(100% + 2px);
+  }
+}
